# CASA-refactor

./: .gitignore  README.md
CASA/: Dependencies  TAGS  casa-1.1b  input  output
CASA/casa/: Main.C  Main.d
CASA/casa/algorithms/: BinarySearch.C  BinarySearch.d
CASA/casa/annealing/: Anneal.C  Anneal.H  AnnealingFilter.H  AnnealingPartitioner.C  AnnealingPartitioner.H  AnnealingSuccess.C  AnnealingSuccess.H  AnnealingSuccess.d  Bounds.C  Bounds.H
CASA/casa/events/: EventSource.H  Listener.H
CASA/casa/io/: ConstraintFile.C  ConstraintFile.H  ConstraintFile.d  OutputFile.C  OutputFile.H  SpecificationFile.C  SpecificationFile.H  Usage.C  Usage.H  Usage.d
CASA/casa/sat/: SAT.C  SAT.H
CASA/casa/search/: Filter.H  GreedyFilter.H  Heuristic.H  Node.H  Search.H  SearchFinish.H  StateSpace.H
CASA/common/posix/: getopt.h
CASA/common/utility/: PascalTriangle.C  SubstitutionArray.H  igreater.H  iless.H  pgreater.H  relation.H
CASA/minisat/solver/: Solver.H
CASA_EA/: rsp_casa.eap  rsp_casa002.eap
CASA_Java/src/annealing/: AnnealingFilter.java  Bounds.java  IBounds.java
CASA_Java/src/events/: EventSource.java  Listener.java
CASA_Java/src/sat/: InputClause.java  InputKnown.java  InputTerm.java  SATSolver.java
CASA_Java/src/search/: Filter.java  Goal.java  GreedyFilter.java  Guide.java  Heuristic.java  Node.java  Search.java  SearchConfiguration.java  SearchFinish.java  SearchIteration.java  StateGuide.java  StateSpace.java
CASA_Java/tests/: Equaliser.java
CASA_Java/tests/algorithms/: BinarySearchTest.java  ExpensiveUnaryPredicateTest.java  PartitionerTest.java
CASA_Java/tests/annealing/: AnnealingFilterTest.java
CASA_Testing/src/: Main.java
CASA_Testing/src/algorithms/: BinarySearch.java  ExpensiveUnaryPredicate.java  Partitioner.java
CASA_Testing/src/annealing/: AnnealingFilter.java  IAnneal.java
CASA_Testing/src/sat/: InputKnown.java
CASA_Testing/src/search/: ChildrenAsk.java  Goal.java  GreedyFilter.java  Guide.java  Heuristic.java  Search.java  SearchConfiguration.java  StateSpace.java
CASA_runnable/: CMakeLists.txt  Makefile  example.constraints  example.coveringarray  inputfile  output
CASA_runnable/casa/: CMakeLists.txt  Main.C
CASA_runnable/casa/algorithms/: BinarySearch.C  BinarySearch.H
CASA_runnable/casa/annealing/: Anneal.C  Anneal.H  Anneal.d  AnnealingFilter.H  AnnealingPartitioner.C  AnnealingPartitioner.H  AnnealingPartitioner.d  AnnealingSuccess.C  AnnealingSuccess.H  Bounds.C  Bounds.H  Bounds.d
CASA_runnable/casa/covering/bookkeeping/: Coverage.H  Options.C  Options.H  Options.d
CASA_runnable/casa/covering/cost/: CoverageCost.H
CASA_runnable/casa/covering/filter/: CoveringArrayAnnealingFilter.H
CASA_runnable/casa/covering/goal/: CoverageGoal.H
CASA_runnable/casa/covering/heuristic/: CoveringArrayHeuristic.H
CASA_runnable/casa/covering/space/: CoveringArraySpace.C  CoveringArraySpace.H  CoveringArraySpace.d  GraftSpace.C  GraftSpace.H  GraftSpace.d  SingleChangeSpace.C  SingleChangeSpace.H
CASA_runnable/casa/covering/state/: CoveringArray.C  CoveringArray.H  CoveringArrayEntry.C  CoveringArrayEntry.d  CoveringArrayRow.C  CoveringArrayRow.d  CoveringArraySubRow.C  CoveringArraySubRow.d
CASA_runnable/casa/events/: EventSource.H
CASA_runnable/casa/io/: ConstraintFile.C  ConstraintFile.H  OutputFile.C  OutputFile.H  OutputFile.d  SpecificationFile.C  SpecificationFile.H  SpecificationFile.d  Usage.C
CASA_runnable/casa/sat/: SAT.C  SAT.H  SAT.d
CASA_runnable/casa/search/: Filter.H  Goal.H  GreedyFilter.H  Guide.H  Heuristic.H  Search.H  SearchConfiguration.H  SearchFinish.H  SearchIteration.H  StateGuide.H  StateSpace.H
CASA_runnable/common/utility/: Array.H  Combinadic.C  Combinadic.H  Combinadic.d  CombinadicIterator.C  CombinadicIterator.H  CombinadicIterator.d  Lazy.H  PascalTriangle.H  PascalTriangle.d  pless.H
CASA_runnable/minisat/solver/: Solver.C  Solver.H  SolverTypes.H
docs/: Thumbs.db  development plan.xlsx
docs/Code map/: rsp_casa_java_map.docx
docs/Internal/: code-translate-instructions.txt
docs/Minutes/: CASA_Minutes_w9.docx
docs/Templates/: CASA_Minutes_template_blank.docx  CASA_template.potx  ~$SA_Minutes_template_blank.docx
docs/WIP/: CASA_Acceptance_document_v1.docx  CASA_C++toJava.docx  CASA_Feb28_v2.pptx  CASA_Feb28_v3.pptx  CASA_Final_v1.pptx  CASA_Mar2_v4.pptx  CASA_May4_v1.pptx  CASA_May4_v2.pptx  CASA_Minutes_w1.docx  CASA_Minutes_w10.docx  CASA_Minutes_w11.docx  CASA_Minutes_w12.docx  CASA_Minutes_w13.docx  CASA_Minutes_w1_v2.docx  CASA_Minutes_w1_v3.docx  CASA_Minutes_w2_v1.docx  CASA_Minutes_w6.docx  CASA_Minutes_w8.docx  CASA_Minutes_w9.docx  CASA_ProjectPlanTracker.pptx  CASA_ProjectPlan_v1.docx  CASA_ProjectPlan_v2.docx  CASA_ProjectReport.docx  CASA_Questions_03-21.docx  CASA_Requirements.docx  CASA_TaskList.docx  CASA_v1.pptx  ChR - Parsing.docx  Deployment model.rtf  HelpNeeded.docx  Modules-posix-and-IO-are-used-for-parsing-the-input-file.docx  TaskRiskDecision.xlsx  development plan.xlsx  rsp_casa_map.docx  ~$CASA_Final_v1.pptx  ~$SA_Minutes_w1.docx  ~$SA_Minutes_w8.docx  ~$SA_Minutes_w9.docx  ~$SA_ProjectPlan_v1.docx  ~$development plan.xlsx  (+1 more)
docs/WIP/src/: CASA-The-epic-union-of-java-and-C.docx  (+3 more)
(+58 files in other folders)
