cmake_minimum_required(VERSION 3.6)
project(CASA)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        casa/algorithms/BinarySearch.C
        casa/algorithms/BinarySearch.H
        casa/annealing/Anneal.C
        casa/annealing/Anneal.H
        casa/annealing/AnnealingFilter.H
        casa/annealing/AnnealingPartitioner.C
        casa/annealing/AnnealingPartitioner.H
        casa/annealing/AnnealingSuccess.C
        casa/annealing/AnnealingSuccess.H
        casa/annealing/Bounds.C
        casa/annealing/Bounds.H
        casa/covering/bookkeeping/Coverage.H
        casa/covering/bookkeeping/Options.C
        casa/covering/bookkeeping/Options.H
        casa/covering/cost/CoverageCost.H
        casa/covering/filter/CoveringArrayAnnealingFilter.H
        casa/covering/goal/CoverageGoal.H
        casa/covering/heuristic/CoveringArrayHeuristic.H
        casa/covering/report/IterationReport.H
        casa/covering/space/CoveringArraySpace.C
        casa/covering/space/CoveringArraySpace.H
        casa/covering/space/GraftSpace.C
        casa/covering/space/GraftSpace.H
        casa/covering/space/SingleChangeSpace.C
        casa/covering/space/SingleChangeSpace.H
        casa/covering/state/CoveringArray.C
        casa/covering/state/CoveringArray.H
        casa/covering/state/CoveringArrayEntry.C
        casa/covering/state/CoveringArrayRow.C
        casa/covering/state/CoveringArraySubRow.C
        casa/events/EventSource.H
        casa/events/Listener.H
        casa/io/ConstraintFile.C
        casa/io/ConstraintFile.H
        casa/io/OutputFile.C
        casa/io/OutputFile.H
        casa/io/SpecificationFile.C
        casa/io/SpecificationFile.H
        casa/io/Usage.C
        casa/io/Usage.H
        casa/sat/SAT.C
        casa/sat/SAT.H
        casa/search/Filter.H
        casa/search/Goal.H
        casa/search/GreedyFilter.H
        casa/search/Guide.H
        casa/search/Heuristic.H
        casa/search/Node.H
        casa/search/Search.H
        casa/search/SearchConfiguration.H
        casa/search/SearchFinish.H
        casa/search/SearchIteration.H
        casa/search/StateGuide.H
        casa/search/StateSpace.H
        casa/Main.C
        common/posix/getopt.h
        common/utility/Array.H
        common/utility/Combinadic.C
        common/utility/Combinadic.H
        common/utility/CombinadicIterator.C
        common/utility/CombinadicIterator.H
        common/utility/igreater.H
        common/utility/iless.H
        common/utility/Lazy.H
        common/utility/PascalTriangle.C
        common/utility/PascalTriangle.H
        common/utility/pgreater.H
        common/utility/pless.H
        common/utility/relation.H
        common/utility/SubstitutionArray.H
        minisat/include/Alg.h
        minisat/include/BasicHeap.h
        minisat/include/BoxedVec.h
        minisat/include/Heap.h
        minisat/include/Map.h
        minisat/include/Queue.h
        minisat/include/Sort.h
        minisat/include/Vec.h
        minisat/solver/Solver.C
        minisat/solver/Solver.H
        minisat/solver/SolverTypes.H)

add_executable(CASA ${SOURCE_FILES})